--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.8
+Date: 2020.12.06
+  Features:
+    - Updated to 1.1.x
+---------------------------------------------------------------------------------------------------
 Version: 1.3.7
 Date: 2020.04.22
   Changes:
