--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.9
+Date: 2021.06.14
+  Changes:
+    - Removed Wired Roboports and Roboport Power Field functionality
+---------------------------------------------------------------------------------------------------
 Version: 1.3.8
 Date: 2020.12.06
   Features:
