--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.10
+Date: 2021.06.16
+  Changes:
+    - Added incompatible flag with BetterBots, in case it is ever updated
+---------------------------------------------------------------------------------------------------
 Version: 1.3.9
 Date: 2021.06.14
   Changes:
